Bug fixes, handling IntelliJ warnings and tidying up code